# aws-iot-fleetwise-edge

./: .clang-format  .clang-tidy  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-LICENSES  appspec.yml  buildspec.yml  package.xml  pyproject.toml
examples/: CMakeLists.txt  README.md
examples/custom_function/: CMakeLists.txt  CustomFunctionCounter.cpp  CustomFunctionCounter.h  CustomFunctionFileSize.cpp  CustomFunctionFileSize.h  CustomFunctionSin.cpp  CustomFunctionSin.h  README.md  campaign-counter.json  campaign-file-size.json  campaign-sin.json  custom-decoders-file-size.json  custom-nodes-file-size.json  main.cpp
examples/mqtt_pub_sub/: CMakeLists.txt  README.md  main.cpp
examples/network_agnostic_actuator_commands/: AcCommandDispatcher.cpp  AcCommandDispatcher.h  CMakeLists.txt  README.md  custom-decoders-ac-actuators.json  custom-nodes-ac-actuators.json  main.cpp  network-interface-custom-ac-actuators.json
examples/network_agnostic_data_collection/: CMakeLists.txt  MyCounterDataSource.cpp  MyCounterDataSource.h  MyCustomDataSource.cpp  MyCustomDataSource.h  README.md  campaign-nadc-example-heartbeat.json  custom-decoders-my-counter.json  custom-decoders-my-custom.json  custom-decoders-my-location.json  custom-nodes-my-counter.json  custom-nodes-my-custom.json  main.cpp  network-interface-custom-my-counter.json  network-interface-custom-my-custom.json
examples/s3_upload/: CMakeLists.txt  MyS3Upload.cpp  MyS3Upload.h  README.md  main.cpp
examples/someip/: CMakeLists.txt  MySomeipDataSource.cpp  MySomeipDataSource.h  MySomeipInterfaceWrapper.cpp  MySomeipInterfaceWrapper.h  README.md  campaign-my-someip-heartbeat.json  custom-decoders-my-someip.json  custom-nodes-my-someip.json  main.cpp  network-interface-custom-my-someip.json
examples/someip/fidl/: MySomeipInterface.fdepl  MySomeipInterface.fidl
src/: AaosVhalSource.cpp  AaosVhalSource.h  ActuatorCommandManager.cpp  ActuatorCommandManager.h  Assert.h  AwsBootstrap.cpp  AwsBootstrap.h  AwsGGChannel.cpp  AwsGGChannel.h  AwsGGConnectivityModule.cpp  AwsGGConnectivityModule.h  AwsGreengrassV2ConnectivityModule.cpp  AwsGreengrassV2ConnectivityModule.h  AwsGreengrassV2Receiver.cpp  AwsGreengrassV2Receiver.h  AwsGreengrassV2Sender.cpp  AwsGreengrassV2Sender.h  AwsIotChannel.cpp  AwsIotChannel.h  AwsIotConnectivityModule.cpp  AwsIotConnectivityModule.h  AwsIotReceiver.cpp  AwsIotReceiver.h  AwsIotSender.cpp  AwsIotSender.h  AwsSDKMemoryManager.cpp  AwsSDKMemoryManager.h  CANDataConsumer.cpp  CANDataConsumer.h  CANDataSource.cpp  CANDataSource.h  CANDataTypes.h  CANDecoder.cpp  CANDecoder.h  CANInterfaceIDTranslator.h  CMakeLists.txt  CPUUsageInfo.cpp  CPUUsageInfo.h  CacheAndPersist.cpp  CacheAndPersist.h  (+188 more)
src/datainspection/: CMakeLists.txt
src/datainspection/include/: CollectionInspectionAPITypes.h  CollectionInspectionEngine.h  CollectionInspectionWorkerThread.h  DataOverDDSModule.h  DataReduction.h  GeohashFunctionNode.h  IActiveConditionProcessor.h  IActiveDecoderDictionaryListener.h  IDataReadyToPublishListener.h  INetworkChannelConsumer.h  InspectionEventListener.h  NetworkChannelBinder.h  NetworkChannelConsumer.h  OBDOverCANModule.h  OBDOverCANSessionManager.h
src/datainspection/src/: CollectionInspectionEngine.cpp  CollectionInspectionWorkerThread.cpp
src/datainspection/test/: CollectionInspectionEngineTest.cpp  CollectionInspectionWorkerThreadTest.cpp  DataOverDDSModuleTest.cpp  GeohashFunctionNodeTest.cpp  GeohashTest.cpp  NetworkChannelBinderTest.cpp  OBDOverCANModuleTest.cpp  valgrind.supp
src/datamanagement/: CMakeLists.txt
src/datamanagement/custom/: CMakeLists.txt  README.md
src/datamanagement/datacollection/: CMakeLists.txt
src/datamanagement/datadecoding/: CMakeLists.txt
src/datamanagement/datainspection/: CMakeLists.txt
src/datamanagement/datamanager/: CMakeLists.txt
src/datamanagement/datasender/: CMakeLists.txt
src/datamanagement/include/: CANDataTypes.h  CANDecoder.h  CANInterfaceIDTranslator.h  CollectionScheme.h  CollectionSchemeIngestion.h  CollectionSchemeIngestionList.h  CollectionSchemeJSONParser.h  CollectionSchemeListener.h  CollectionSchemeManagementListener.h  CollectionSchemeManager.h  DataCollectionJSONWriter.h  DataCollectionProtoWriter.h  DataCollectionSender.h  DecoderManifestIngestion.h  ICollectionScheme.h  ICollectionSchemeList.h  ICollectionSchemeManager.h  IDecoderDictionary.h  IDecoderManifest.h  OBDDataDecoder.h  OBDDataTypes.h  Schema.h  SchemaListener.h
src/datamanagement/src/: CANDecoder.cpp  CollectionScheme.cpp  CollectionSchemeIngestion.cpp  CollectionSchemeIngestionList.cpp  CollectionSchemeJSONParser.cpp  CollectionSchemeManager.cpp  DataCollectionJSONWriter.cpp  DataCollectionSender.cpp  DecoderManifestIngestion.cpp  OBDDataDecoder.cpp  Schema.cpp
src/datamanagement/test/: CollectionSchemeJSONParserTest.cpp  DataCollectionProtoWriterTest.cpp  DataCollectionSenderTest.cpp  OBDDataDecoderTest.cpp  SchemaTest.cpp  valgrind.supp
src/datamanagement/types/: CMakeLists.txt
src/executionmanagement/: CMakeLists.txt
src/executionmanagement/include/: IoTFleetWiseConfig.h  IoTFleetWiseEngine.h  IoTFleetWiseVersion.h
src/executionmanagement/src/: IoTFleetWiseConfig.cpp  IoTFleetWiseEngine.cpp  IoTFleetWiseVersion.cpp.in  android_shared_library.cpp  main.cpp
src/executionmanagement/test/: IoTFleetWiseConfigTest.cpp  IoTFleetWiseEngineTest.cpp  em-example-config-corrupt.json  em-example-config-inline-creds.json  em-example-config.json  valgrind.supp
src/offboardconnectivity/: CMakeLists.txt
src/offboardconnectivity/api/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt
src/snf/: DataSenderProtoReader.cpp  IoTJobsDataRequestHandler.cpp  RateLimiter.cpp  StoreFileSystem.cpp  StoreLogger.cpp  StreamForwarder.cpp  StreamManager.cpp
src/testingsupport/: CMakeLists.txt
src/testingsupport/src/: main.cpp
src/vehiclenetwork/: CMakeLists.txt
(+873 files in other folders)
